# desafio-crossfit

./: Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3968765460cd_init_db.py  dec6cc54c9e0_init_db.py  e49ab5b8ccf3_fix_datetime_timezone.py
app/: main.py  routers.py
app/atleta/: controller.py  models.py  schemas.py
app/categoria/: controller.py  models.py  schemas.py
app/centro_treinamento/: controller.py  models.py  schemas.py
app/config/: database.py  settings.py
app/contrib/: dependencies.py  models.py  schemas.py
app/contrib/repository/: models.py
