[project]
name = "desafio-crossfit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "basedpyright>=1.36.1",
    "fastapi>=0.123.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.9",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
